gccida/g3/dwarf2out_frame_debug_expr
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1794:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1309, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1795:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)expr->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1796:12: error: expected ';' after expression
v6 = ( rtx)expr[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1800:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1603, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1802:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1479, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1822:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1549, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1841:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1513, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1849:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1555, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1856:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1490, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1859:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1495, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1872:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1561, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1879:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1528, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1890:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1538, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1918:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1588, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1931:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v32.rtwint = ( __int64)v6->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1934:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
|| ( v34 = ( __int64)v6[1], *( _WORD *)v34 != 54) ) 
                     ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1936:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1457, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1956:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1386, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1957:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v41.rtwint = ( __int64)v6->fld[0]; 
                       ^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dwarf2out_frame_debug_expr/src/obj/dwarf2out.o] Error 1
